<resources>
    <string name="app_name">CBS Scanner</string>

    <string name="settings">Settings</string>

    <string name="manual">Manual</string>
    <string name="running_nr">Running Nr.</string>
    <string name="location">Location</string>
    <string name="part_nr">Part-Nr.</string>
    <string name="carton_nr">Carton-Nr.</string>
    <string name="d_nr">D-Nr.</string>
    <string name="quantity">Quantity</string>

    <string name="scan">Scan</string>
    <string name="reset">Reset</string>
    <string name="upload">Upload</string>
    <string name="next">Next</string>
    <string name="view">View</string>
    <string name="clear">Clear</string>

    <string name="ftp_server_address">FTP Server Address</string>
    <string name="port">Port(for SFTP protocol)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>